--- a/Portafolio 2.0/portafolio/aplicacion/templates/actualizarreserva.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/actualizarreserva.html
@@ -6,38 +6,34 @@
 
 {% block content %}
 <br>  
-<div class="row">
-  <div class="col-sm-6 col-sm-offset-3">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">
-            Actualizar Reserva
-          </h3>
+<div class="reserva-arriendo">
+ <div class="contenedor">
+     <form action="" class="form" method="POST">
+     <div class="form-header">
+         <h1 class="form-title"><i class="fas fa-plus-circle"></i>Actualizar<span> Reserva </span></h1>
+     </div> 
+     <div class="texto-reserva">
+         <p>Actualizar Reserva
+         </p>
+     </div>
+           <label>Fecha de Ingreso</label><br>
+           {{ form.Fecha_Reserva_Inicio }}<hr><br>
+           <label>Fecha de Salida</label><br>
+           {{ form.Fecha_Reserva_Termino }}<hr><br>
+           <label>Departamento a Elegir</label><br>
+           {{ form.departamento }}<hr><br>
+           <label>Cantidad de dias</label><br>
+           {{ form.Cantidad_Dias }}<hr><br>
+           <label>Servicios Extras</label><br>
+           {{ form.servicioextra }}<hr><br>  
+           <label>Usuario</label><br>   
+           {{ form.user }}<hr><br>       
+              <br><br>
+              {% csrf_token %}
+              <input type="submit" class="form-submit" value="Actualizar" onClick="verificarCasilla(this.form)">
+              <input type="reset" class="form-submit" value="Limpiar Formulario">
+              <a href="/inicio">Volver al Menu</a>
+              </form>
+          </div>
       </div>
-      <div class="panel-body">
-        <form method="POST" accept-charset="UTF-8" role="form" >
-          <fieldset>
-            <label>Fecha de Ingreso</label><br>
-            {{ form.Fecha_Reserva_Inicio }}<hr><br>
-            <label>Fecha de Salida</label><br>
-            {{ form.Fecha_Reserva_Termino }}<hr><br>
-            <label>Departamento a Elegir</label><br>
-            {{ form.departamento }}<hr><br>
-            <label>Cantidad de Dias</label><br>
-            {{ form.Cantidad_Dias }}<hr><br>
-            <label>Servicios Extras</label><br>
-            {{ form.servicioextra }}<hr><br>
-            <th>Cliente</th>
-            {{ form.user }}<hr><br>
-
-                {% csrf_token %}
-              </div>
-            <input class="btn btn-lg btn-primary btn-block" type="submit" value="Editar">
-          </fieldset>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
-
 {% endblock %}
