--- a/Portafolio 2.0/portafolio/aplicacion/templates/index.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/index.html
@@ -3,14 +3,10 @@
 
 {% block content %}
 
-
-
-
-
 <div class="informaciontur"> 
   <div class="informacion-turismo">
     <br>
-    <h2>¿Quienes Somos?</h2>
+    <h2 align="center">¿Quienes Somos?</h2>
     <br>
     <p>
       Somos una empresa dedicada al rubro de arriendo, trasnporte y turismo, por lo cual,
@@ -23,7 +19,7 @@
       <br>
     </p>
     <br>
-    <h2>¿Mision? ¿Vision?</h2>
+    <h2 align="center">¿Mision? ¿Vision?</h2>
     <br>
     <p>
       Nuestra mision es otorgarle al cliente, el mejor servicio que haya probado en su vida, 
@@ -114,7 +110,7 @@
           <div class="imgBox">
             <img src="{% static 'img/people2.jpg' %}" alt="Project 3 image" class="img-responsive underlay">
           </div>
-          <p>
+          <p style="color:black;">
             Realmente TurismoReal es una clase de turismo de Primera Categoria,
             me siento totalmente satisfecho por el servicio y el personal, por lo cual,
             recomiendo a todas las personas venir a usar este grandioso servicio.
@@ -127,7 +123,7 @@
           <div class="imgBox">
             <img src="{% static 'img/people4.jpg' %}" alt="Project 3 image" class="img-responsive underlay">
           </div>
-          <p>
+          <p style="color:black;">
             Al comienzo sentia un poco de curiosidad del servicio, ya que, nunca tuve una referencia
             de este lugar para saber que pasaria, pero luego cuando llege, el personal 
             me hizo sentir como si estuviese en casa. La comodidad ahi es esplendida, 
@@ -141,7 +137,7 @@
           <div class="imgBox">
             <img src="{% static 'img/people6.jpg' %}" alt="Project 3 image" class="img-responsive underlay">
           </div>
-          <p>
+          <p style="color:black;">
             Un lugar de primera categoria, considero que es uno de los mejores 
             servicios que he recibido en la vida, de tal forma, que vendria una y 
             otra vez aqui, debido a su calidad, agradezco el servicio.
