--- a/Portafolio 2.0/portafolio/aplicacion/templates/cliente_generic.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/cliente_generic.html
@@ -13,7 +13,6 @@
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
   <link href="{% static 'img/logo.PNG' %}" rel="icon"> 
   <link href="{% static 'css/cliente.css' %}" rel="stylesheet">
-  <link href="{% static 'css/Nav.css' %}" rel="stylesheet">
   <link href="{% static 'css/perfil.css' %}" rel="stylesheet">
   <link href="{% static 'css/servicios.css' %}" rel="stylesheet">
   <link href="{% static 'css/testimonio.css' %}" rel="stylesheet">
@@ -22,6 +21,7 @@
   <link href="{% static 'css/galeria-cliente.css' %}" rel="stylesheet">
   <link href="{% static 'css/carrusel.css' %}" rel="stylesheet">
   <link href="{% static 'css/administrador.css' %}" rel="stylesheet">
+  <link rel="manifest" href="{% static '/manifest.json' %}">
 
   <link rel="stylesheet" href="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.css" integrity="sha512-QAY8RpaU+5mx/feUcMx9GlZda/DWr2b7MFnFAPuLKSsVOnBOSGMHZDv4e1HbeLrjGFlhaFYIC29vKGCpOjQryw==" crossorigin="anonymous" />
@@ -313,8 +313,9 @@
   <script src="{% static 'lib/owlcarousel/owl.carousel.min.js' %}"></script>
   <script src="{% static 'lib/waypoints/waypoints.min.js' %}"></script>
   <script src="{% static 'lib/counterup/counterup.min.js' %}"></script>
-  <script src="{% static 'contactform/contactform.js' %}"></script>
   <script src="{% static 'js/custom.js' %}"></script>
   <script src="{% static 'js/color-switcher.js' %}"></script>
+  <script src="{% static 'script/app.js' %}"></script>
+
 </body>
 </html>
