--- a/Portafolio 2.0/portafolio/aplicacion/templates/cliente_generic.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/cliente_generic.html
@@ -23,7 +23,6 @@
   <link href="{% static 'css/administrador.css' %}" rel="stylesheet">
   <link rel="manifest" href="{% static 'manifest.json' %}">
 
-  <link rel="stylesheet" href="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.css" integrity="sha512-QAY8RpaU+5mx/feUcMx9GlZda/DWr2b7MFnFAPuLKSsVOnBOSGMHZDv4e1HbeLrjGFlhaFYIC29vKGCpOjQryw==" crossorigin="anonymous" />
 
 
@@ -89,7 +88,6 @@
       </script>
 
 <link href="{% static 'css/cliente.css' %}" rel="stylesheet">
-<link href="{% static 'css/Nav.css' %}" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.css" integrity="sha512-QAY8RpaU+5mx/feUcMx9GlZda/DWr2b7MFnFAPuLKSsVOnBOSGMHZDv4e1HbeLrjGFlhaFYIC29vKGCpOjQryw==" crossorigin="anonymous" />
 </head>
 <body class="page-index has-hero">
@@ -283,7 +281,7 @@
     
     
   {% endblock %}
-  <footer id="footer" class="block block-bg-grey-dark" data-block-bg-img="img/bg_footer-map.png" data-stellar-background-ratio="0.4">
+  <footer id="footer" class="block block-bg-grey-dark" data-block-bg-img="" data-stellar-background-ratio="0.4">
     <div class="container">
       <div class="row" id="contact">
         <div class="col-md-3">
