--- a/Portafolio 2.0/portafolio/aplicacion/templates/base_generic.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/base_generic.html
@@ -196,5 +196,6 @@
   <script src="{% static 'js/custom.js' %}"></script>
   <script src="{% static 'js/color-switcher.js' %}"></script>
   <script src="{% static 'swInstall.js' %}"></script>
+  <script src="{% static 'js/notificacion.js' %}"></script>
 </body>
 </html>
