--- a/Portafolio 2.0/portafolio/aplicacion/templates/cliente_generic.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/cliente_generic.html
@@ -22,10 +22,7 @@
   <link href="{% static 'css/carrusel.css' %}" rel="stylesheet">
   <link href="{% static 'css/administrador.css' %}" rel="stylesheet">
   <link rel="manifest" href="{% static 'manifest.json' %}">
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.css" integrity="sha512-QAY8RpaU+5mx/feUcMx9GlZda/DWr2b7MFnFAPuLKSsVOnBOSGMHZDv4e1HbeLrjGFlhaFYIC29vKGCpOjQryw==" crossorigin="anonymous" />
-
-
   <script type="text/javascript">
     (function(document) {
       'use strict';
@@ -86,16 +83,11 @@
       }
       const csrftoken = token('csrftoken');
       </script>
-
   <!-- Notificaciones -->
-
           <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
-
     <!-- TODO: Add SDKs for Firebase products that you want to use
         https://firebase.google.com/docs/web/setup#available-libraries -->
-
-
 <link href="{% static 'css/cliente.css' %}" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.css" integrity="sha512-QAY8RpaU+5mx/feUcMx9GlZda/DWr2b7MFnFAPuLKSsVOnBOSGMHZDv4e1HbeLrjGFlhaFYIC29vKGCpOjQryw==" crossorigin="anonymous" />
 </head>
@@ -112,7 +104,6 @@
             <div class="col-md-8">
               <a class="navbar-brand" href="/inicio" title="inicio cliente">
                 <h1 class="hidden">
-                    <img src="{% static 'img/logo.PNG' %}" alt="Logo Turismo Real">
                     Turismo Real
                 </h1>
               </a>
@@ -219,6 +210,9 @@
           <li> 
               <a  href="/inicio"> <strong><i class="fas fa-bars"></i> Menu Principal </strong> </a>
           </li>
+          <li> 
+            <a  href="/multa"> <strong><i class="fas fa-pager"></i> Multa </strong> </a>
+        </li>
           <li> 
               <a  href="/perfil_funcionario"> <strong><i class="fas fa-user-circle"></i> perfil </strong> </a>
           </li>
