--- a/Portafolio 2.0/portafolio/aplicacion/templates/generar_estadistica.html
+++ b/Portafolio 2.0/portafolio/aplicacion/templates/generar_estadistica.html
@@ -3,4 +3,64 @@
 
 {% block content %}
 
+<div class="inicio-adm">
+    <div class="inicio-adm-titulo">
+        <h1><i class="fas fa-align-justify"></i> Estadisticas</h1>
+    </div>
+    <div class="inicio-adm-opciones">
+         <div class="inicio-adm-opciones-botones1">
+           <a href=""><i class="fas fa-users"></i> Cant. Clientes</a>
+           <br><br>
+           <p>" {{ clientes }} "</p>
+         </div>
+         <div class="inicio-adm-opciones-botones2">
+           <a href=""><i class="fas fa-building"></i> Cant. Departamento</a> 
+           <br><br>
+           <p>" {{ departamentos }} "</p>
+         </div>
+         <div class="inicio-adm-opciones-botones7">
+          <a href=""><i class="fas fa-bed"></i> Cant. Reserva</a>
+          <br><br>
+          <p>" {{ reservas }} "</p>
+        </div>
+         <div class="inicio-adm-opciones-botones4">
+         <a href=""><i class="fas fa-hands-helping"></i> Cant. Servicios Basicos</a> 
+         <br><br>
+         <p>" {{ servicios }} "</p>
+        </div>
+        <div class="inicio-adm-opciones-botones9">
+            <a href=""><i class="fas fa-hands-helping"></i> Ganancia Multa</a> 
+            <br><br>
+            <p>" {{ gananciamulta }} "</p>
+        </div>
+        <div class="inicio-adm-opciones-botones10">
+            <a href=""><i class="fas fa-hands-helping"></i> Ganancia Reserva</a> 
+            <br><br>
+            <p>" {{ ganaciareserva }} "</p>
+        </div>
+        <div class="inicio-adm-opciones-botones1">
+            <a href=""><i class="fas fa-users"></i> Ganancia diaria</a>
+            <br><br>
+            <p>" {{ clientes }} "</p>
+          </div>
+          <div class="inicio-adm-opciones-botones2">
+            <a href=""><i class="fas fa-building"></i> Ganancia semanal</a> 
+            <br><br>
+            <p>" {{ departamentos }} "</p>
+          </div>
+          <div class="inicio-adm-opciones-botones7">
+           <a href=""><i class="fas fa-bed"></i> Ganancia mensual</a>
+           <br><br>
+           <p>" {{ reservas }} "</p>
+         </div>
+          <div class="inicio-adm-opciones-botones4">
+          <a href=""><i class="fas fa-hands-helping"></i> Ganancia Anual</a> 
+          <br><br>
+          <p>" {{ servicios }} "</p>
+         </div>
+    </div>
+  </div>
+
+
+
 {% endblock %}
